# gh-mdp

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yaml
assets/: template.html
scripts/: build.sh
src/: args.rs  main.rs
src/server/: assets.rs  files.rs  markdown.rs  mod.rs  state.rs  template.rs  util.rs  watcher.rs  websocket.rs
