[package]
name = "gh-mdp"
version = "0.3.0"
edition = "2024"
description = "A GitHub Flavored Markdown live preview server"

[[bin]]
name = "gh-mdp"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "sync", "macros", "fs"] }

# Web server
axum = { version = "0.8.7", features = ["ws"] }
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
futures = "0.3.31"

# Markdown rendering
pulldown-cmark = { version = "0.13.0", features = ["simd"] }

# File watching
notify-debouncer-mini = "0.7.0"
ignore = "0.4.25"

# MIME type detection
mime_guess = "2.0.5"

# Logging
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Error management
anyhow = "1.0.100"

# CLI handling
clap = { version = "4.5.53", features = ["derive"] }

# Ser/deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Open URL
open = "5.3.3"

[build-dependencies]
reqwest = { version = "0.12.24", features = ["blocking"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
